cockroachlabs-preview-main/docs/v23.2/ui-hot-ranges-page.mdx
---
title: "Hot Ranges Page"
old_description: "The Hot Ranges page provides details about ranges receiving a high number of reads or writes."
---

<Note>
On a secure cluster, this area of the DB Console can only be accessed by users belonging to the [`admin` role](/docs/v23.2/security-reference/authorization#admin-role) or a SQL user with the [`VIEWCLUSTERMETADATA`](/docs/v23.2/security-reference/authorization#viewclustermetadata) [system privilege](/docs/v23.2/security-reference/authorization#supported-privileges) (or the legacy `VIEWACTIVITY` or `VIEWACTIVITYREDACTED` [role option](/docs/v23.2/security-reference/authorization#role-options)) defined. The [`VIEWACTIVITY`](/docs/v23.2/security-reference/authorization#viewactivity) or [`VIEWACTIVITYREDACTED`](/docs/v23.2/security-reference/authorization#viewactivityredacted) [system privileges](/docs/v23.2/security-reference/authorization#supported-privileges) **do not** grant access to this page.
</Note>

The **Hot Ranges** page of the DB Console provides details about ranges receiving a high number of reads or writes. These are known as *hot ranges*.

When [optimizing](/docs/v23.2/performance-best-practices-overview#hot-spots) or [troubleshooting](/docs/v23.2/query-behavior-troubleshooting#single-hot-node) statement performance, this page can help you identify nodes, ranges, or tables that are experiencing hot spots.

To view this page, [access the DB Console](/docs/v23.2/ui-overview#db-console-access) and click **Hot Ranges** in the left-hand navigation.

## Filter hot ranges

Use the **Filter** menu to filter the [hot ranges list](#hot-ranges-list) on any combination of: node ID, store ID, database, table, index, or locality.

## Hot ranges list

The **Hot ranges** list displays the ranges with the highest queries per second (QPS) from each node [`store`](/docs/v23.2/architecture/storage-layer).

<Note>
Hot ranges are not necessarily problematic. Some ranges naturally experience higher QPS than others. For example, a range for a frequently accessed table will have a higher QPS.

However, a significant increase in traffic can also indicate a *hot spot* on the range that should be reduced. For more information, see [Hot spots](/docs/v23.2/performance-best-practices-overview#hot-spots).
</Note>

To view the [Range Report](#range-report) for a hot range, click its range ID.

<table><thead><tr><th>Parameter</th><th>Description</th></tr></thead><tbody><tr><td>Range ID</td><td>The ID of the hot range. Click the range ID to view the <a href="#range-report">Range Report</a> for this range.</td></tr><tr><td>QPS</td><td>The total number of <a href="/docs/v23.2/selection-queries"><code>SELECT</code></a>, <a href="/docs/v23.2/update"><code>UPDATE</code></a>, <a href="/docs/v23.2/insert"><code>INSERT</code></a>, and <a href="/docs/v23.2/delete"><code>DELETE</code></a> queries executed per second on this range. The per-second rate is averaged over the last 30 minutes.</td></tr><tr><td>CPU</td><td>The total CPU time per second used in processing this range. The per-second rate is averaged over the last 30 minutes.</td></tr><tr><td>Write (keys)</td><td>The total number of keys written per second on this range. The per-second rate is averaged over the last 30 minutes.</td></tr><tr><td>Write (bytes)</td><td>The total number of bytes written per second on this range. The per-second rate is averaged over the last 30 minutes.</td></tr><tr><td>Read (keys)</td><td>The total number of bytes written per second on this range. The per-second rate is averaged over the last 30 minutes.</td></tr><tr><td>Read (bytes)</td><td>The total number of bytes read per second on this range. The per-second rate is averaged over the last 30 minutes.</td></tr><tr><td>Nodes</td><td>The ID of each node where the range data is found.</td></tr><tr><td>Store ID</td><td>The ID of the store where the range data is found.</td></tr><tr><td>Leaseholder</td><td>The ID of the node that has the <a href="/docs/v23.2/architecture/reads-and-writes-overview#cockroachdb-architecture-terms">range lease</a>.</td></tr><tr><td>Database</td><td>The database where the range data is found.</td></tr><tr><td>Table</td><td>The table where the range data is found.</td></tr><tr><td>Index</td><td>The index where the range data is indexed, if applicable.</td></tr><tr><td>Locality</td><td>The locality of the node where the range data is found.</td></tr></tbody></table>

## Range Report

The **Range Report** is typically used for [advanced debugging](/docs/v23.2/ui-debug-pages#even-more-advanced-debugging) purposes.

If your aim is to [reduce hot spots](/docs/v23.2/performance-best-practices-overview#hot-spots), refer to the following fields:

- `Key Range` shows the interval of the [key space](/docs/v23.2/architecture/distribution-layer#range-descriptors) that is "hottest" (i.e., read by the processor). This is expressed as a span of key values.
- `Lease Holder QPS` shows the queries executed per second on the node that holds the [range lease](/docs/v23.2/architecture/replication-layer#leases). If a hot range is not properly using [load-based splitting](/docs/v23.2/load-based-splitting), this will be greater than the value configured by the `kv.range_split.load_qps_threshold` [cluster setting](/docs/v23.2/cluster-settings) ( `2500` by default).

## See also

- [Hot spots](/docs/v23.2/performance-best-practices-overview#hot-spots)
- [Hash-sharded Indexes](/docs/v23.2/hash-sharded-indexes)
- [Architecture Overview](/docs/v23.2/architecture/overview)
